--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
   <ul class="nav-menu" id="navMenu">
     <button class="close-menu" onclick="toggleMenu()">
-      <img src="close_icon.svg" alt="Close" width="30">
+      <img src="img/close_icon.svg" alt="Close" width="30">
     </button>
     <li><a href="#beranda" onclick="filterPosts('all')">Halaman utama</a></li>
     <li><a href="#local" onclick="filterPosts('local')">Bokep local</a></li>
