--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
+ <!-- JuicyAds PopUnders v3 Start -->
+<script type="text/javascript" src="https://js.juicyads.com/jp.php?c=4464u233x2a4u4r2o2e4y25424&u=https%3A%2F%2Fwww.juicyads.rocks"></script>
+<!-- JuicyAds PopUnders v3 End -->
+  
 <body>
 
   <nav class="navbar">
@@ -80,6 +84,8 @@
 
   <script src="js/script.js"></script>
   <script>
+
+    
 
      function searchPosts(event) {
     event.preventDefault();
