--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
  <!-- JuicyAds PopUnders v3 Start -->
 <script type="text/javascript" src="https://js.juicyads.com/jp.php?c=4464u233x2a4u4r2o2e4y25424&u=https%3A%2F%2Fwww.juicyads.rocks"></script>
 <!-- JuicyAds PopUnders v3 End -->
+
+ <meta name="monetag" content="38a78bf492cffb6e157e9a6a21b0da44">
   
 <body>
 
