--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Nekopara</title>
   <meta name="description" content="Bokep indonesia, bokep jepang, bokep barat, konten viral terbaru, bokep viral terbaru, bokep terbaru, bokep terlengkap tanpa vpn, bokep jepang terbaru , bokep indo terbaru, keylapoi bokep, bokep omek, bokep lesbi, bokep ngewe, ngewe viral">
   <meta name="keywords" content="Bokep indonesia, bokep jepang, bokep barat, konten viral terbaru, bokep viral terbaru, bokep terbaru, bokep terlengkap tanpa vpn, bokep jepang terbaru , bokep indo terbaru, keylapoi bokep, bokep omek, bokep lesbi, bokep ngewe, ngewe viral">
-  <meta name="author" content="Keylapoi">
+  <meta name="author" content="nekopara">
   <meta name="theme-color" content="#000000">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
@@ -131,3 +131,4 @@
 
   
 </body></html>
+
