--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <script>(s=>{s.dataset.zone='9713245',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+<script>(s=>{s.dataset.zone='9713245',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 
  <meta name="monetag" content="38a78bf492cffb6e157e9a6a21b0da44">
   
@@ -129,5 +130,6 @@
 
   
 </body></html>
+
 
 
